Log entries: JavaFX SDK skeleton, Load File flow, EventsFileLoader NPE fix